fix naming in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ before_script:
 script:
   - go build application.go
   - go test ./... -cover -v
-  - docker build -t template_go .
-  - docker run -d -p 8080:8080 --name template_go_container template_go
+  - docker build -t clients .
+  - docker run -d -p 8080:8080 --name clients_container clients
   - curl http://127.0.0.1:8080/v1/hello_world
-  - docker stop template_go_container
-  - docker rm template_go_container
-  - docker rmi template_go
-
+  - docker stop clients_container
+  - docker rm clients_container
+  - docker rmi clients
