--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - cd tests
   - java -jar karate.jar create-client-test.feature
   - java -jar karate.jar get-client-test.feature
+  - java -jar karate.jar update-clietn-test.feature
   - docker stop clients_container
   - docker rm clients_container
   - docker rmi clients
