--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,25 @@ language:
   - go
 go:
   - "1.11.x"
-before_script:
+sudo: required
+env:
+  - DOCKER_COMPOSE_VERSION=1.24.0
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+install:
   - go get -v github.com/gin-gonic/gin
   - go get -v github.com/lib/pq
   - go get -v github.com/jmoiron/sqlx
+before_script:
+  - git clone https://github.com/apmath-web/data
 script:
   - go build application.go
   - go test ./... -cover -v
-  - docker build -t clients .
-  - docker run -d -p 8080:8080 --name clients_container clients
+  - docker-compose up --build -d
+  - docker-compose run migrate migrate
   - curl http://127.0.0.1:8080/v1/1
-  - docker stop clients_container
-  - docker rm clients_container
-  - docker rmi clients
+  - 'x=`ls data/sql | wc -l`; while [ $x -gt 0 ]; do docker-compose run migrate down; x=$(($x-1)); done'
+  - docker-compose down
