--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ script:
   - go build application.go
   - go test ./... -cover -v
   - docker-compose up --build -d
+  - docker-compose down
+  - docker-compose run migrate migrate
   - sleep 10
+  - docker-compose up -d
+  - sleep 60
   - docker-compose run migrate migrate
   - 'x=`ls data/sql | wc -l`; while [ $x -gt 0 ]; do docker-compose run migrate down; x=$(($x-1)); done'
   - docker-compose down
