--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - DB_USER=test
       - DB_PASSWORD=test
       - DB_HOST=database
+      - DB_PORT=5432
+      - DB_NAME=test
     networks:
       - bridge
   migrate:
